Added registration of a participant in an event

--- a/Frontend/Pages/Event/OrganizedEventPage.razor
+++ b/Frontend/Pages/Event/OrganizedEventPage.razor
@@ -3,6 +3,7 @@
 @using Blazored.LocalStorage
 @using System.Net.Http.Headers
 @using System.IdentityModel.Tokens.Jwt
+@using Frontend.Models.Event.regist
 @using Frontend.Models.Event.Ticket
 @inject HttpClient httpClient
 @inject ILocalStorageService localStorage
