--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -53,7 +53,7 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="EventPage">
+                <NavLink class="nav-link" href="TicketManagement">
                     <span aria-hidden="true"></span> Participant Events
                 </NavLink>
             </div>
@@ -78,7 +78,7 @@
                 </NavLink>
             </div>
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="EventPage">
+                <NavLink class="nav-link" href="TicketManagement">
                     <span aria-hidden="true"></span> Participant Events
                 </NavLink>
             </div>
