--- a/Frontend/Shared/NavMenu.razor
+++ b/Frontend/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
         
         @if (UserIsAdmin)
         {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="user">
+                    <span class="oi oi-person" aria-hidden="true"></span> User Profile
+                </NavLink>
+            </div>
            
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="UserManagement">
