--- a/Frontend/Pages/Event/OrganizedEventPage.razor
+++ b/Frontend/Pages/Event/OrganizedEventPage.razor
@@ -18,7 +18,7 @@
 {
     <table class="table">
         <thead>
-        <tr>
+        <tr style="background: #e6dbb9"> 
             <th>Name</th>
             <th>Date/Time</th>
             <th>Localization</th>
